<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".View.InputFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/filter_by"
        android:textColor="@color/button_text"
        android:textSize="36dp" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_black"
        android:entries="@array/filter_items" />

    <Spinner
        android:id="@+id/filter_by_tags"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_black"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filter_by_make_editview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/make_hint"
        android:padding="10sp"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filter_by_start_date_editview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/start_date_hint"
        android:padding="10sp"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filter_by_end_date_editview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/end_date_hint"
        android:padding="10sp"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filter_by_description_editview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/description_hint"
        android:padding="10sp"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_filter_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/square_button"
        android:backgroundTint="@color/taskbar"
        android:fontFamily="monospace"
        android:text="@string/confirm"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_filter_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/square_button"
        android:backgroundTint="@color/taskbar"
        android:fontFamily="monospace"
        android:text="@string/cancel"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>