<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="70dp"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/display_tag">
    <ListView
        android:id="@+id/tag_listview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:dividerHeight="2dp"
        android:background="@drawable/border"
        android:fontFamily="monospace"
        android:layout_margin="20dp">
    </ListView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_tag"
        android:hint="Enter tag"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="20dp"
        android:visibility="invisible">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/button_style"
            android:backgroundTint="@color/button_colour"
            android:textColor="@color/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add"
            android:id="@+id/add_tag"
            android:layout_marginEnd="30dp">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/button_style"
            android:backgroundTint="@color/button_colour"
            android:textColor="@color/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_tag"
            android:text="@string/delete"
            android:layout_marginStart="30dp">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</LinearLayout>